--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "repl": "npm run start -- --entryFile repl"
+    "repl": "npm run start -- --entryFile repl",
+    "repl:dev": "npm run start -- --watch --entryFile repl"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
