Implementa helloworld en client
 Habilita cors en server
 Configura ts build del server para no analizar client

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,8 @@
     "noFallthroughCasesInSwitch": false
   },
   "exclude": [
-    "node_modules",
-    "dist",
-    "client"
+    "client/**/*",
+    "dist/**/*",
+    "node_modules/**/*"
   ]
 }
